@@ -64,7 +64,7 @@ SUCH DAMAGE.
   <li><a href="dreamcast.html#linux_live_cd">Linux/dreamcast</a>
   <li><a href="#openbsdpmaxinstall">OpenBSD/pmax 2.8-BETA</a>
   <li><a href="#openbsdcatsinstall">OpenBSD/cats 4.0</a>
-  <li><a href="#openbsdlandiskinstall">OpenBSD/landisk 5.4</a>
+  <li><a href="#openbsdlandiskinstall">OpenBSD/landisk 6.3</a>
   <li><a href="#openbsdmvme88kinstall">OpenBSD/mvme88k 4.5</a>
   <li><a href="#helenos">HelenOS/testmips and testarm 0.5.0</a>
   <li><a href="#ultrixinstall">Ultrix/RISC 4.5</a>
@@ -1592,7 +1592,7 @@ boot from the harddisk image:
 <h3>OpenBSD/landisk:</h3>
 
 <p>It is possible to install and run
-<a href="http://www.openbsd.org/landisk.html">OpenBSD/landisk</a>
+<a href="http://www.openbsd.org/landisk.html">OpenBSD/landisk</a> 6.3
 in GXemul.
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -1607,28 +1607,18 @@ follow these instructions:
 <ol>
   <li>Create an empty harddisk image, which will be the root disk
 	that OpenBSD installs itself onto:<pre>
-	<b>dd if=/dev/zero of=obsd_landisk.img bs=1024 count=1 seek=2000000</b>
+	<b>dd if=/dev/zero of=obsd_landisk.img bs=1024 count=1 seek=1500000</b>
 
 </pre>
-  <li>Download the entire landisk directory from the ftp server:<pre>
-	<b>wget -np -l 0 -r <a href="ftp://ftp.se.openbsd.org/pub/OpenBSD/5.4/landisk/">ftp://ftp.se.openbsd.org/pub/OpenBSD/5.4/landisk/</a></b>
-	<b>cp ftp.se.openbsd.org/pub/OpenBSD/5.4/landisk/bsd .</b>
-	<b>cp ftp.se.openbsd.org/pub/OpenBSD/5.4/landisk/bsd.rd .</b>
+  <li>Download the Landisk RAMDISK kernel, the regular kernel, and the files
+  	needed to produce a working .iso from the ftp server, and create the .iso
+  	using the <tt>mkisofs</tt> tool (may be part of the cdrtools package):<pre>
+	<b>wget http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/SHA256.sig http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/INSTALL.landisk http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/base63.tgz http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/comp63.tgz http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/man63.tgz http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/bsd http://ftp.openbsd.org/pub/OpenBSD/6.3/landisk/bsd.rd
+	mkisofs -J -o openbsd_landisk.iso base63.tgz comp63.tgz man63.tgz bsd INSTALL.landisk SHA256.sig</b>
 
 </pre>
-	(Replace ftp.se.openbsd.org with a server closer to you, for
-	increased download speed.)
-  <p>
-  <li>You now need to make an ISO image of the entire directory you downloaded.
-	(I recommend using <tt>mkisofs</tt> for that purpose. If you don't
-	already have <tt>mkisofs</tt> installed on your system, you need
-	to install it in order to do this.)<pre>
-	<b>mkisofs -U -o openbsd_landisk_5.4.iso ftp.se.openbsd.org/pub/OpenBSD/</b>
-	<b>rm -rf ftp.se.openbsd.org</b>      <i># this directory is not needed anymore</i>
-
-</pre>
-  <li>Start the emulator using this command line:<pre>
-	<b>gxemul -x -E landisk -d obsd_landisk.img -d d:openbsd_landisk_5.4.iso bsd.rd</b>
+  <li>Start the emulator using this command line (<b>note the <tt>d:</tt> prefix</b>):<pre>
+	<b>gxemul -E landisk -d obsd_landisk.img -d d:openbsd_landisk.iso bsd.rd</b>
 
 </pre>
 	and proceed like you would do if you were installing OpenBSD
@@ -1639,14 +1629,14 @@ follow these instructions:
 	  <li>Do <b>not</b> configure the network. (The Realtek NIC
 		found in the Landisk machine is not implemented yet
 		in the emulator.)
-	  <li>root disk = <b>wd0</b> (the disk to install onto)
-	  <li>Use the entire disk for OpenBSD (<b>whole</b>)
+	  <li>root disk = <b>wd0</b> (the disk to install onto),
+		use the <b>whole</b> disk for OpenBSD
 	  <li>Accept the auto-layout (one big root partition (a) and a
 	  	small swap partition (b). c is the entire disk).
-	  <li>Location of sets = <b>disk</b>
-	  <li>Is the disk partition already mounted = <b>no</b>
-	  <li>Disk containing the install media = <b>wd1</b>
-	  <li>Pathname to the sets = <b>5.4/landisk</b>
+	  <li>Location of sets = <b>disk</b>,
+		is the disk partition already mounted = <b>no</b>,
+		disk containing the install media = <b>wd1</b>
+	  <li>Pathname to the sets = <b>/</b>
 	</ul>
 </ol>
 
@@ -1654,7 +1644,7 @@ follow these instructions:
 boot from the disk image:
 
 <p><pre>
-	<b>gxemul -x -E landisk -d obsd_landisk.img bsd</b>
+	<b>gxemul -E landisk -d obsd_landisk.img bsd</b>
 
 </pre>
 
